fixed scrollbar in spacebar when no spaces are shown

--- a/src/app/pages/content-page/content-page.component.css
+++ b/src/app/pages/content-page/content-page.component.css
@@ -1,5 +1,5 @@
 mat-sidenav {
-  min-width: 50px;
+  min-width: 51px;
 }
 
 mat-sidenav-container {
